--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -136,3 +136,5 @@ obj-$(CONFIG_VIRT_DRIVERS)	+= virt/
 obj-$(CONFIG_HYPERV)		+= hv/
 
 obj-$(CONFIG_PM_DEVFREQ)	+= devfreq/
+
+obj-$(CONFIG_MDM_CTRL)		+= modem_control/
