--- a/arch/x86/configs/i386_mfld_defconfig
+++ b/arch/x86/configs/i386_mfld_defconfig
@@ -2787,6 +2787,14 @@ CONFIG_RPMSG_IPC=y
 # CONFIG_PM_DEVFREQ is not set
 
 #
+# Modem control driver
+#
+CONFIG_MDM_CTRL=y
+CONFIG_MDM_CTRL_DEV_NAME="mdm_ctrl"
+CONFIG_MDM_IMC_6260=y
+#CONFIG_MDM_IMC_7160 is not set
+
+#
 # Firmware Drivers
 #
 # CONFIG_EDD is not set
