--- a/arch/x86/configs/i386_mrfl_defconfig
+++ b/arch/x86/configs/i386_mrfl_defconfig
@@ -2776,6 +2776,14 @@ CONFIG_RPMSG_IPC=y
 # CONFIG_PM_DEVFREQ is not set
 
 #
+# Modem control driver
+#
+CONFIG_MDM_CTRL=y
+CONFIG_MDM_CTRL_DEV_NAME="mdm_ctrl"
+# CONFIG_MDM_IMC_6260 is not set
+CONFIG_MDM_IMC_7160=y
+
+#
 # Firmware Drivers
 #
 # CONFIG_EDD is not set
